Update VS Code launch configs
Excel Desktop: this launch config will launch Excel but the
task pane cannot be debugged using VS Code. Instead, use Edge DevTools
or Visual Studio to attach to the task pane and debug.

Office Online (Edge): this launch config will allow you to debug
the task pane code but requires manual configuration first. Replace
the url with the share link to an Office Online document. After
debugging is started, you will need to upload the manifest to insert
the add-in into the document. You can then set breakpoints in the
source code, and should hit them when the code is executed.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,23 @@
     {
       "name": "Excel Desktop",
       "type": "node",
-      "request": "attach",
-      "port": 9229,
-      "protocol": "inspector",
-      "timeout": 600000,
-      "trace": true,
-      "preLaunchTask": "Debug: Desktop",
-      "postDebugTask": "Stop Debug",
-      "outFiles": [ "${workspaceFolder}/dist/**/*.js" ]
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "run-script",
+        "start-desktop"
+      ],
+    },
+    {
+      "name": "Office Online (Edge)",
+      "type": "edge",
+      "request": "launch",
+      // To debug your Add-in:
+      // 1. Replace the url with the share link to an Office Online document.
+      // 2. Sideload your Add-in. https://docs.microsoft.com/en-us/office/dev/add-ins/testing/sideload-office-add-ins-for-testing
+      "url": "https://www.office.com",
+      "webRoot": "${workspaceFolder}",
+      "preLaunchTask": "Debug: Web"
     }
   ]
 }
