--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,6 +40,17 @@
             "problemMatcher": []
         },
         {
+            "label": "Debug: Web",
+            "type": "npm",
+            "script": "start-web",
+            "presentation": {
+                "clear": true,
+                "panel": "shared",
+                "showReuseMessage": false
+            },
+            "problemMatcher": []
+        },
+        {
             "label": "Dev Server",
             "type": "npm",
             "script": "dev-server",
