--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "url": "https://github.com/OfficeDev/Office-Addin-TaskPane.git"
   },
   "license": "MIT",
+  "config": {
+    "app-type-to-debug": "desktop",
+    "dev-server-port": 3000
+  },
   "scripts": {
     "build": "webpack -p --mode production",
     "build-dev": "webpack --mode development",
     "dev-server": "webpack-dev-server --mode development",
     "sideload": "office-toolbox sideload -m manifest.xml -a excel",
-    "start": "npm run start-desktop",
-    "start-desktop": "office-addin-debugging start manifest.xml --dev-server \"npm run dev-server\" --dev-server-port 3000 --sideload \"npm run sideload\" --no-live-reload",
-    "start-web": "office-addin-debugging start manifest.xml --dev-server \"npm run dev-server\" --dev-server-port 3000 --no-debug --no-live-reload",
-    "stop": "office-addin-debugging stop manifest.xml --unload \"npm run unload\"",
+    "start": "office-addin-debugging start manifest.xml",
+    "start:desktop": "office-addin-debugging start manifest.xml desktop",
+    "start:web": "office-addin-debugging start manifest.xml web",
+    "stop": "office-addin-debugging stop manifest.xml",
     "unload": "office-toolbox remove -m manifest.xml -a excel",
     "validate": "office-toolbox validate -m manifest.xml",
     "watch": "webpack --mode development --watch"
@@ -38,8 +42,8 @@
     "fs": "0.0.1-security",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "office-addin-debugging": "^1.4.0",
-    "office-toolbox": "^0.1.0",
+    "office-addin-debugging": "^2.0.0",
+    "office-toolbox": "^0.1.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.1",
     "typescript": "^3.1.6",
