--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "config": {
+    "app-to-debug": "excel",
     "app-type-to-debug": "desktop",
     "dev-server-port": 3000
   },
@@ -14,12 +15,18 @@
     "build": "webpack -p --mode production",
     "build-dev": "webpack --mode development",
     "dev-server": "webpack-dev-server --mode development",
-    "sideload": "office-toolbox sideload -m manifest.xml -a excel",
+    "sideload": "echo Please specify which app using 'npm run sideload:app'.",
+    "sideload:excel": "office-toolbox sideload -m manifest.xml -a excel",
+    "sideload:powerpoint": "office-toolbox sideload -m manifest.xml -a powerpoint",
+    "sideload:word": "office-toolbox sideload -m manifest.xml -a word",
     "start": "office-addin-debugging start manifest.xml",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
-    "unload": "office-toolbox remove -m manifest.xml -a excel",
+    "unload": "echo Please specify which app using 'npm run unload:app'.",
+    "unload:excel": "office-toolbox remove -m manifest.xml -a excel",
+    "unload:powerpoint": "office-toolbox remove -m manifest.xml -a powerpoint",
+    "unload:word": "office-toolbox remove -m manifest.xml -a word",
     "validate": "office-toolbox validate -m manifest.xml",
     "watch": "webpack --mode development --watch"
   },
@@ -42,7 +49,7 @@
     "fs": "0.0.1-security",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "office-addin-debugging": "^2.0.0",
+    "office-addin-debugging": "^2.1.0",
     "office-toolbox": "^0.1.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.1",
