--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "outDir": "lib",
     "sourceMap": true,
     "target": "es5",
+    "lib": [
+      "es2015",
+      "dom"
+    ]
   },
   "exclude": [
     "node_modules",
