--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "scripts": {
     "build": "webpack -p --mode production",
     "build-dev": "webpack --mode development",
+    "build-test": "webpack --config ./test/webpack.config.js --mode development",
     "convert-to-single-host": "node convertToSingleHost.js",
     "dev-server": "webpack-dev-server --mode development",
+    "dev-server-test": "webpack-dev-server --config ./test/webpack.config.js --mode development",
     "sideload": "echo Please specify which app using 'npm run sideload:app'.",
     "sideload:excel": "office-toolbox sideload -m manifest.xml -a excel",
     "sideload:powerpoint": "office-toolbox sideload -m manifest.xml -a powerpoint",
@@ -24,6 +26,7 @@
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
+    "test": "mocha -r ts-node/register test/*.ts",
     "unload": "echo Please specify which app using 'npm run unload:app'.",
     "unload:excel": "office-toolbox remove -m manifest.xml -a excel",
     "unload:powerpoint": "office-toolbox remove -m manifest.xml -a powerpoint",
@@ -36,22 +39,29 @@
     "@babel/core": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.4",
     "@types/office-js": "^1.0.9",
     "@types/office-runtime": "^1.0.8",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
+    "current-processes": "^0.2.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
     "office-addin-debugging": "^2.3.0",
     "office-addin-dev-certs": "^1.2.4",
+    "office-addin-test-helpers": "^0.3.0",
+    "office-addin-test-server": "^0.3.0",
     "office-toolbox": "^0.1.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.0.2",
+    "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
-    "webpack": "^4.32.2",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-dev-server": "^3.5.1"
   }
 }
