--- a/package.json
+++ b/package.json
@@ -17,20 +17,12 @@
     "build-dev": "webpack --mode development --https false && echo . && echo . && echo . && echo Please use 'build:dev' instead of 'build-dev'.",
     "convert-to-single-host": "node convertToSingleHost.js",
     "dev-server": "webpack-dev-server --mode development",
-    "sideload": "echo Please specify which app using 'npm run sideload:app'.",
-    "sideload:excel": "office-toolbox sideload -m manifest.xml -a excel",
-    "sideload:powerpoint": "office-toolbox sideload -m manifest.xml -a powerpoint",
-    "sideload:word": "office-toolbox sideload -m manifest.xml -a word",
     "start": "office-addin-debugging start manifest.xml",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
     "test": "mocha -r ts-node/register test/*.ts",
-    "unload": "echo Please specify which app using 'npm run unload:app'.",
-    "unload:excel": "office-toolbox remove -m manifest.xml -a excel",
-    "unload:powerpoint": "office-toolbox remove -m manifest.xml -a powerpoint",
-    "unload:word": "office-toolbox remove -m manifest.xml -a word",
-    "validate": "office-toolbox validate -m manifest.xml",
+    "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {},
@@ -50,11 +42,11 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.1.4",
-    "office-addin-debugging": "^2.4.2",
-    "office-addin-dev-certs": "^1.3.2",
-    "office-addin-test-helpers": "^1.0.1",
-    "office-addin-test-server": "^1.0.2",
-    "office-toolbox": "^0.2.1",
+    "office-addin-debugging": "^3.0.6",
+    "office-addin-dev-certs": "^1.4.4",
+    "office-addin-manifest": "^1.4.6",
+    "office-addin-test-helpers": "^1.0.9",
+    "office-addin-test-server": "^1.0.10",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
