--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/preset-env": "^7.5.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.2",
-    "@types/office-js": "^1.0.30",
+    "@types/office-js": "^1.0.31",
     "@types/office-runtime": "^1.0.8",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -42,17 +42,18 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^6.2.0",
-    "office-addin-debugging": "^3.0.10",
-    "office-addin-dev-certs": "^1.4.7",
-    "office-addin-manifest": "^1.4.9",
+    "office-addin-cli": "^1.0.1",
+    "office-addin-debugging": "^3.0.11",
+    "office-addin-dev-certs": "^1.4.8",
+    "office-addin-manifest": "^1.4.10",
     "office-addin-test-helpers": "^1.0.11",
-    "office-addin-test-server": "^1.0.13",
+    "office-addin-test-server": "^1.0.14",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
   }
 }
