Add Outlook debug configs to launch.json and tasks.json
- Also add new "document" param option to package.json config settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,6 +48,28 @@
       "postDebugTask": "Stop Debug"
     },
     {
+      "name": "Outlook Desktop (Edge Chromium)",
+      "type": "edge",
+      "request": "attach",
+      "useWebView": "advanced",
+      "port": 9229,
+      "timeout": 600000,
+      "webRoot": "${workspaceRoot}",
+      "preLaunchTask": "Debug: Outlook Desktop",
+      "postDebugTask": "Stop Debug"
+    },
+    {
+      "name": "Outlook Desktop (Edge Legacy)",
+      "type": "office-addin",
+      "request": "attach",
+      "url": "https://localhost:3000/taskpane.html?_host_Info=Outlook$Win32$16.01$en-US$$$$0",
+      "port": 9222,
+      "timeout": 600000,
+      "webRoot": "${workspaceRoot}",
+      "preLaunchTask": "Debug: Outlook Desktop",
+      "postDebugTask": "Stop Debug"
+    },
+    {
       "name": "PowerPoint Desktop (Edge Chromium)",
       "type": "edge",
       "request": "attach",
