--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "config": {
     "app-to-debug": "excel",
     "app-type-to-debug": "desktop",
-    "dev-server-port": 3000
+    "dev-server-port": 3000,
+    "document": ""
   },
   "scripts": {
     "build": "webpack -p --mode production --https false",
