--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "office-addin-lint prettier",
     "start": "office-addin-debugging start manifest.xml",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
+    "start:desktop:outlook": "office-addin-debugging start manifest.outlook.xml desktop --app outlook",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
     "test": "mocha -r ts-node/register test/*.ts",
@@ -49,7 +50,7 @@
     "html-webpack-plugin": "^4.5.0",
     "mocha": "^8.1.3",
     "office-addin-cli": "^1.0.13",
-    "office-addin-debugging": "^3.0.34",
+    "office-addin-debugging": "^4.0.2",
     "office-addin-dev-certs": "^1.5.5",
     "office-addin-lint": "^1.0.26",
     "office-addin-manifest": "^1.5.12",
