Making debugging web via vscode working again

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,9 +59,12 @@
       "problemMatcher": []
     },
     {
+      // To debug your Add-in:
+      // 1. When prompted, enter the url (share link) to an Office Online document.
+      // 2. Sideload your Add-in. https://docs.microsoft.com/en-us/office/dev/add-ins/testing/sideload-office-add-ins-for-testing
       "label": "Debug: Web",
       "type": "npm",
-      "script": "start:web",
+      "script": "start:web -- --document ${input:officeOnlineDocumentUrl}",
       "presentation": {
         "clear": true,
         "panel": "shared",
@@ -130,5 +133,12 @@
       },
       "problemMatcher": []
     },
+  ],
+  "inputs": [
+    {
+      "id": "officeOnlineDocumentUrl",
+      "type": "promptString",
+      "description": "Please enter the url for the Office Online document."
+    }
   ]
 }
