--- a/package.json
+++ b/package.json
@@ -29,39 +29,40 @@
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/core": "^7.11.6",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@types/find-process": "1.2.0",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.22",
-    "@types/office-js": "^1.0.160",
-    "@types/office-runtime": "^1.0.17",
-    "babel-loader": "^8.2.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^14.0.13",
+    "@types/office-js": "^1.0.108",
+    "@types/office-runtime": "^1.0.14",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.4.1",
+    "copy-webpack-plugin": "^6.1.1",
     "eslint-config-office-addins": "^1.0.19",
+    "find-process": "^1.4.3",
     "file-loader": "^4.2.0",
-    "find-process": "^1.4.4",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.5.1",
-    "mocha": "^8.2.1",
-    "office-addin-cli": "^1.0.17",
-    "office-addin-debugging": "^4.0.3",
-    "office-addin-dev-certs": "^1.5.12",
-    "office-addin-lint": "^1.0.32",
-    "office-addin-manifest": "^1.5.16",
-    "office-addin-prettier-config": "^1.0.14",
-    "office-addin-test-helpers": "^1.0.28",
-    "office-addin-test-server": "^1.0.37",
+    "html-webpack-plugin": "^4.5.0",
+    "mocha": "^8.1.3",
+    "office-addin-cli": "^1.0.13",
+    "office-addin-debugging": "^4.0.2",
+    "office-addin-dev-certs": "^1.5.5",
+    "office-addin-lint": "^1.0.26",
+    "office-addin-manifest": "^1.5.12",
+    "office-addin-prettier-config": "^1.0.12",
+    "office-addin-test-helpers": "^1.0.27",
+    "office-addin-test-server": "^1.0.30",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
-    "webpack": "^4.46.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^4.0.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.0"
   },
   "prettier": "office-addin-prettier-config"
 }
