require Node v14 / NPM v6 (#113)
Add "engines" to package.json so that Node v14 and NPM v6 is required.

The .npmrc file makes engine-strict=true at the project level, so "npm install" will give an error if Node or NPM is the wrong version.

I also added the registry setting in .npmrc in case the user config specifies a private registry. This ensures that packages only come from the public registry.

The package-lock.json file is updated for NPM v6 (e.g. lockfile version 1).

When convertToSingleHost.js is run, it will remove "engines" from package.json and delete the .npmrc file.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "app_type_to_debug": "desktop",
     "dev_server_port": 3000
   },
+  "engines": {
+    "node": ">=14 <15",
+    "npm": ">=6 <7"
+  },
   "scripts": {
     "build": "webpack -p --mode production --https false",
     "build:dev": "webpack --mode development --https false",
