--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
+  "dependencies": {
+    "core-js": "^3.9.1",
+    "regenerator-runtime": "^0.13.7"
+  },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/find-process": "1.2.0",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
