--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "npm": ">=6 <7"
   },
   "scripts": {
-    "build": "webpack -p --mode production --https false",
-    "build:dev": "webpack --mode development --https false",
-    "build-dev": "webpack --mode development --https false && echo . && echo . && echo . && echo Please use 'build:dev' instead of 'build-dev'.",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "build-dev": "webpack --mode development && echo . && echo . && echo . && echo Please use 'build:dev' instead of 'build-dev'.",
     "convert-to-single-host": "node convertToSingleHost.js",
-    "dev-server": "webpack-dev-server --mode development",
+    "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
+    "lint:test": "office-addin-lint check --test",
     "prettier": "office-addin-lint prettier",
     "start": "office-addin-debugging start manifest.xml",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
@@ -47,27 +48,27 @@
     "@types/office-runtime": "^1.0.17",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "eslint-plugin-office-addins": "^0.2.2",
-    "file-loader": "^4.2.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "eslint": "^7.29.0",
+    "eslint-plugin-office-addins": "^0.3.0",
     "find-process": "^1.4.4",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.5.1",
+    "html-loader": "^2.1.0",
+    "html-webpack-plugin": "^5.3.0",
     "mocha": "^8.2.1",
-    "office-addin-cli": "^1.1.3",
-    "office-addin-debugging": "^4.1.9",
-    "office-addin-dev-certs": "^1.5.21",
-    "office-addin-lint": "^1.2.2",
-    "office-addin-manifest": "^1.5.25",
-    "office-addin-prettier-config": "^1.0.16",
-    "office-addin-test-helpers": "^1.0.35",
-    "office-addin-test-server": "^1.0.46",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.2",
-    "ts-node": "^9.1.1",
+    "office-addin-cli": "^1.2.0",
+    "office-addin-debugging": "^4.2.0",
+    "office-addin-dev-certs": "^1.6.0",
+    "office-addin-lint": "^1.3.0",
+    "office-addin-manifest": "^1.6.0",
+    "office-addin-prettier-config": "^1.1.0",
+    "office-addin-test-helpers": "^1.1.0",
+    "office-addin-test-server": "^1.1.0",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.1.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "prettier": "office-addin-prettier-config"
