--- a/.azure-devops/devcerts.yml
+++ b/.azure-devops/devcerts.yml
@@ -1,6 +1,7 @@
 steps:
-  - script: |
-   echo Install Office-AddinDev-Certs at machine level
-   npx office-addin-dev-certs install --machine
+  - script: 
+    - |
+      echo Install Office-AddinDev-Certs at machine level
+      npx office-addin-dev-certs install --machine
   
   displayName: 'Install add-in dev cert'
