--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.0",
     "eslint-plugin-office-addins": "^1.0.0",
+    "file-loader": "^6.2.0",
     "find-process": "^1.4.4",
     "html-loader": "^2.1.0",
     "html-webpack-plugin": "^5.3.0",
