--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "office-addin-prettier-config": "^1.1.0",
     "office-addin-test-helpers": "^1.1.2",
     "office-addin-test-server": "^1.1.2",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.0",
