--- a/.azure-devops/full-pipeline.yml
+++ b/.azure-devops/full-pipeline.yml
@@ -7,6 +7,10 @@ jobs:
     pool:
       name: OETest-OfficeClientApps
     steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '14.x'
+          checkLatest: true
       - template: ./install.yml
       - template: ./lint.yml
       - template: ./build.yml
