--- a/.azure-devops/edgewebview.yml
+++ b/.azure-devops/edgewebview.yml
@@ -1,13 +1,7 @@
 steps:
   - script: |
-     echo Install Office-AddinDev-Certs at machine level
-     npx office-addin-dev-certs install --machine
-    
-    displayName: 'Install add-in dev cert'
-
-  - script: |
      echo Enable EdgeWebView Loopback
-     npx office-addin-dev-settings appcontainer EdgeWebView --loopback --yes
+     call npx office-addin-dev-settings appcontainer EdgeWebView --loopback --yes
      
      echo Set Edge WebView Registry Settings
      
