--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^14.14.22",
     "@types/office-js": "^1.0.180",
     "@types/office-runtime": "^1.0.17",
+    "acorn": "^8.5.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
