Revert to npm command for test call

--- a/.azure-devops/test.yml
+++ b/.azure-devops/test.yml
@@ -1,15 +1,8 @@
 steps:
-# - task: Npm@1
-#   displayName: 'npm test'
-#   inputs:
-#     command: custom
-#     verbose: false
-#     customCommand: 'run test'
-- script: |
-   echo Running Tests
-   
-   npm run test
-   
-   echo Done running tests
-   
-  displayName: 'CMD npm test'
+- task: Npm@1
+  displayName: 'npm test'
+  inputs:
+    command: custom
+    verbose: false
+    customCommand: 'run test'
+
