--- a/.azure-devops/full-pipeline.yml
+++ b/.azure-devops/full-pipeline.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 jobs:
-  - job: Windows10Latest
+  - job: Windows 10 Latest
     pool:
       name: OE-OfficeClientApps
     steps:
@@ -13,3 +13,14 @@ jobs:
       - template: ./devcerts.yml
       - template: ./edgewebview.yml
       - template: ./test.yml
+
+  - job: Mac
+    pool:
+      name: OPX Mac Dogfood Pool
+    steps:
+      - template: ./install.yml
+      - template: ./lint.yml
+      - template: ./build.yml
+      - template: ./test.yml
+      - template: ./cleanup.yml
+      
