Add different WebView jobs

--- a/.azure-devops/full-pipeline.yml
+++ b/.azure-devops/full-pipeline.yml
@@ -14,6 +14,32 @@ jobs:
       - template: ./edgewebview.yml
       - template: ./test.yml
 
+  - job: WebView_Edge-legacy
+    pool:
+      name: OE-OfficeClientApps
+    steps:
+      - template: ./install.yml
+      - template: ./lint.yml
+      - template: ./build.yml
+      - template: ./devcerts.yml
+      - template: ./edgewebview.yml
+      - template: ./test.yml
+        parameters:
+          webView: "edge-legacy"
+
+  - job: WebView_ie
+    pool:
+      name: OE-OfficeClientApps
+    steps:
+      - template: ./install.yml
+      - template: ./lint.yml
+      - template: ./build.yml
+      - template: ./devcerts.yml
+      - template: ./edgewebview.yml
+      - template: ./test.yml
+        parameters:
+          webView: "ie"
+
   - job: Mac
     pool:
       name: OPX Mac Dogfood Pool
