--- a/.azure-devops/full-pipeline.yml
+++ b/.azure-devops/full-pipeline.yml
@@ -14,7 +14,7 @@ jobs:
       - template: ./edgewebview.yml
       - template: ./test.yml
 
-  - job: WebView_Edge-legacy
+  - job: WebView_EdgeLegacy
     pool:
       name: OE-OfficeClientApps
     steps:
@@ -27,7 +27,7 @@ jobs:
         parameters:
           webView: "edge-legacy"
 
-  - job: WebView_ie
+  - job: WebView_IE
     pool:
       name: OE-OfficeClientApps
     steps:
