Add explicit webView setting to Win10Latest job

--- a/.azure-devops/full-pipeline.yml
+++ b/.azure-devops/full-pipeline.yml
@@ -13,6 +13,8 @@ jobs:
       - template: ./devcerts.yml
       - template: ./edgewebview.yml
       - template: ./test.yml
+        parameters:
+          webView: "edge-chromium"
 
   - job: WebView_EdgeLegacy
     pool:
