--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "office-addin-dev-certs": "^1.6.3",
     "office-addin-lint": "^1.3.3",
     "office-addin-manifest": "^1.6.3",
+    "office-addin-mock": "^0.0.1",
     "office-addin-prettier-config": "^1.1.0",
     "office-addin-test-helpers": "^1.1.3",
     "office-addin-test-server": "^1.1.3",
