--- a/.azure-devops/test.yml
+++ b/.azure-devops/test.yml
@@ -10,6 +10,7 @@ steps:
         
         echo Setting WebView Type: ${{ parameters.webView }}
         call npx office-addin-dev-settings webview manifest.xml ${{ parameters.webView }}
+        call npx office-addin-dev-settings webview test/test-manifest.xml ${{ parameters.webView }}
         
         echo Running Tests
         npm run test
