--- a/.azure-devops/full-pipeline.yml
+++ b/.azure-devops/full-pipeline.yml
@@ -29,18 +29,19 @@ jobs:
         parameters:
           webView: "edge-legacy"
 
-  - job: WebView_IE
-    pool:
-      name: OE-OfficeClientApps
-    steps:
-      - template: ./install.yml
-      - template: ./lint.yml
-      - template: ./build.yml
-      - template: ./devcerts.yml
-      - template: ./edgewebview.yml
-      - template: ./test.yml
-        parameters:
-          webView: "ie"
+  # Need to fix tests (use of find-process module) to be able to support IE 11 webview
+  # - job: WebView_IE
+  #   pool:
+  #     name: OE-OfficeClientApps
+  #   steps:
+  #     - template: ./install.yml
+  #     - template: ./lint.yml
+  #     - template: ./build.yml
+  #     - template: ./devcerts.yml
+  #     - template: ./edgewebview.yml
+  #     - template: ./test.yml
+  #       parameters:
+  #         webView: "ie"
 
   - job: Mac
     pool:
