--- a/package.json
+++ b/package.json
@@ -72,5 +72,7 @@
     "webpack-dev-server": "4.1.1"
   },
   "prettier": "office-addin-prettier-config",
-  "browserslist": [ "ie 11" ]
+  "browserslist": [
+    "ie 11"
+  ]
 }
