--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "stop": "office-addin-debugging stop manifest.xml",
     "test": "npm run test:unit && npm run test:e2e",
     "test:e2e": "mocha -r ts-node/register test/end-to-end/*.ts",
-    "test:unit": "jest",
+    "test:unit": "mocha ./test/unit/test-config.ts -r ts-node/register test/unit/*.ts",
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
@@ -42,7 +42,6 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
     "@types/find-process": "1.2.0",
-    "@types/jest": "^27.0.2",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
     "@types/office-js": "^1.0.180",
@@ -55,8 +54,6 @@
     "find-process": "^1.4.4",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.2.4",
-    "jest-transform-stub": "^2.0.0",
     "mocha": "^8.2.1",
     "office-addin-cli": "^1.2.3",
     "office-addin-debugging": "^4.2.3",
@@ -70,7 +67,6 @@
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "source-map-loader": "^3.0.0",
-    "ts-jest": "^27.0.5",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5",
