Adding.d.ts file

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "stop": "office-addin-debugging stop manifest.xml",
     "test": "npm run test:unit && npm run test:e2e",
     "test:e2e": "mocha -r ts-node/register test/end-to-end/*.ts",
-    "test:unit": "mocha ./test/unit/test-config.ts -r ts-node/register test/unit/*.ts",
+    "test:unit": "mocha -r ts-node/register test/unit/*.test.ts",
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
